# robocomp_tools

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: pip_install_test.yml
cli/: CMakeLists.txt  README.md  setup.py
cli/rcbuild/rcbuild/: rcbuild.py
cli/rcworkspace/rcworkspace/: component_dir.py
cli/robocompdsl/robocompdsl/: DEVELOPER.md  logger.py  main.py
cli/robocompdsl/robocompdsl/common/: filesgenerator.py
cli/robocompdsl/robocompdsl/dsl_parsers/: dsl_factory.py  idslpool.py  parsing_utils.py
cli/robocompdsl/robocompdsl/dsl_parsers/specific_parsers/: idsl_parser.py  interfacefacade.py
cli/robocompdsl/robocompdsl/dsl_parsers/specific_parsers/cdsl/: cdsl_parser.py  componentfacade.py  jcdsl_parser.py
cli/robocompdsl/robocompdsl/dsl_parsers/specific_parsers/cdsl/ply_parser/: cdsl_ply_parser.py
cli/robocompdsl/robocompdsl/templates/common/: abstracttemplatesmanager.py  plugin_collection.py
cli/robocompdsl/robocompdsl/templates/templateCPP/files/: CMakeLists.txt
cli/robocompdsl/robocompdsl/templates/templateCPP/files/src/: CMakeLists.txt  CMakeListsSpecific.txt  genericmonitor.cpp  genericworker.cpp  genericworker.h  main.cpp  specificmonitor.cpp  specificmonitor.h  specificworker.cpp  specificworker.h
cli/robocompdsl/robocompdsl/templates/templateCPP/plugins/base/functions/: SERVANT_CPP.py  SERVANT_H.py  function_utils.py
cli/robocompdsl/robocompdsl/templates/templateCPP/plugins/base/functions/src/: CMakeLists_txt.py  genericworker_cpp.py  genericworker_h.py  main_cpp.py  specificworker_cpp.py  specificworker_h.py
cli/robocompdsl/robocompdsl/templates/templateCPP/plugins/dsr/functions/src/: CMakeListsSpecific_txt.py  specificworker_cpp.py  specificworker_h.py
cli/robocompdsl/robocompdsl/templates/templateCPP/plugins/gui/functions/src/: genericworker_h.py
cli/robocompdsl/robocompdsl/templates/templateCPP/plugins/innermodel/functions/src/: specificworker_h.py
cli/robocompdsl/robocompdsl/templates/templateICE/plugins/base/functions/: TEMPLATE_ICE.py
cli/robocompdsl/robocompdsl/templates/templatePython/files/src/: CMakeLists.txt  genericworker.py  specificworker.py
cli/robocompdsl/robocompdsl/templates/templatePython/plugins/base/functions/: SERVANT_PY.py  function_utils.py
cli/robocompdsl/robocompdsl/templates/templatePython/plugins/base/functions/src/: CMakeLists_txt.py  genericworker_py.py  interfaces_py.py  main_py.py  specificworker_py.py
cli/robocompdsl/robocompdsl/templates/templatePython/plugins/gui/functions/src/: genericworker_py.py  mainUI_ui.py  main_py.py
cli/robocompdsl/test/: config_tests.py  test_component_facade.py  test_dsl_factory.py  test_parsing_utils.py
cli/robocompdsl/test/autogeneration_tests/test_cdsl/: test_component_generation.py
rcnode/: rcnode.conf  rcnode.sh
