cmake_minimum_required( VERSION 3.10 )

# Depends on cmake/robocompLocal.cmake and it's not in the repo
# add_subdirectory(rcmanager)
# add_subdirectory(rcmanagerSimple)
# add_subdirectory(rclogger)
# add_subdirectory(rcmonitor)
# add_subdirectory(rcremote)
add_subdirectory(rcinnerModelSimulator)
add_subdirectory(rcnode)
add_subdirectory(cli)
